Edited wiki page through web user interface.

--- a/wiki/Gameplay.wiki
+++ b/wiki/Gameplay.wiki
@@ -3,7 +3,7 @@
 
 =The Problem=
 
-You're probably thinking, "BirdToast.  Ah, that's funny, a Duck Duck Goose video game... Wait a tick, how the #%^& is that going to work?"
+You're probably thinking, "BirdToast.  Ah, that's funny, a Duck Duck Goose video game... Wait wait wait, how the #%^& is that going to work?"
 Well, Scott and I ran into a similar conundrum while brainstorming about the project.  And by the Jewel of Mattezemlia, we've got solutions.
 
 =The Concept=
