Edited wiki page through web user interface.

--- a/wiki/CodingStyle.wiki
+++ b/wiki/CodingStyle.wiki
@@ -19,7 +19,7 @@ private:
 }}}
 
 =Variable Names=
-*Global Variables* : Prefixed by g_  `int g_globalInt`
-*Member Variables* : Prefixed by m_  `int m_memberInt`
+*Global Variables* : Prefixed by `g_` :  `int g_globalInt`
+*Member Variables* : Prefixed by `m_` :  `int m_memberInt`
 
 *Constants* should be all caps.  `#define SOME_CONST 1337`
