Edited wiki page through web user interface.

--- a/wiki/CodingStyle.wiki
+++ b/wiki/CodingStyle.wiki
@@ -28,6 +28,11 @@ private:
 =Commenting=
 (help me out here Zach)
 ===Documenting Classes===
+stub
 ===Documenting Functions===
+stub
+
+=File Structure=
+stub
 
 ,,I don't want to just define everything, please change stuff and we can finalize later.  Just put in what you think will work well and mark what you dont like somehow.,,
