Edited wiki page through web user interface.

--- a/wiki/Subsystems.wiki
+++ b/wiki/Subsystems.wiki
@@ -4,23 +4,28 @@
 =Interaction=
 
 ===Interface===
+(stub)
 
 ===Gameplay===
-
+(stub)
 
 
 =Graphics=
 
 ===Sprites===
+(stub)
 
 ===Animations===
+(stub)
 
 ===Worlds===
-
+(stub)
 
 
 =Audio=
 
 ===Music===
+(stub)
 
 ===Sound Effects===
+(stub)
