Edited wiki page through web user interface.

--- a/wiki/Subsystems.wiki
+++ b/wiki/Subsystems.wiki
@@ -24,7 +24,7 @@ There are two types of animations in the birdtoast engine:
   # Movement: Interpolated keyframe based animation of the constituent parts of a character or object.
 
 ===Sprite===
-A Sprite is an Animation object with position, rotation, and velocity information.
+A Sprite is an object with position, rotation, and velocity information.  It contains an Animation object.
 
 ==Worlds==
 The graphics of each level consist of a tile-set, and up to two backgrounds to scroll in parallax with the tiled terrain.  These elements are pieced together by a tile-set file which specifies the animations for tile image files and the way in which players will interact with the tile.
