--- a/wiki/EventHandler.wiki
+++ b/wiki/EventHandler.wiki
@@ -2,7 +2,7 @@
 #labels Phase-Implementation
 
 *EventHash*: Hash relating strings to events or keysyms.
-*EventHandlerHash*: relating strings to programmable actions (EventHandlerCallbacks).
+*EventHandlerHash*: Hash relating strings to programmable actions (EventHandlerCallbacks).
 
 {{{
 
