Edited wiki page through web user interface.

--- a/wiki/Gameplay.wiki
+++ b/wiki/Gameplay.wiki
@@ -8,4 +8,4 @@ Well, Scott and I ran into a similar conundrum while brainstorming about the pro
 
 =The Concept=
 
-While Duck Duck Goose may be as simple as running around a circle trying to tag your friend in real life, its direct virtual equivalent would not be very entertaining.  We did not want to translate waiting to be tagged and then running into yawning/sighing out of boredom and begrudgingly dropping your stubby fingers one by one onto the four arrow keys in attendance at your keyboard. 
+While Duck Duck Goose may be as simple as running around a circle trying to tag your friend in real life, its direct virtual equivalent would not be very entertaining.  We did not want to translate the real game, waiting to be tagged and then running in short sprints, directly into yawning/sighing out of boredom and begrudgingly dropping your stubby fingers one by one onto the four arrow keys in attendance at your keyboard. 
