--- a/wiki/BirdToast.wiki
+++ b/wiki/BirdToast.wiki
@@ -5,6 +5,7 @@
 As of August 2008, the Box2D physics engine has been implemented as well as XML configuration of resources and the game world.  There is also some concept art in the SVN repository.
 
 ===Todo===
-Ragdolls, Actors, Sound
-Dev Console
-Screenshots to be put here ASAP.
+-Ragdolls, Actors
+-Sound
+-Dev Console.
+-Screenshots to be put here ASAP.
